logs/validate.20260408-034943.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap41/ArraySetEnumMtEph.rs:666:29
    |
666 | ...                   implies u64_view(self.bits@[k])[b] by
    |                       ^^^^^^^

error[E0425]: cannot find type `ArraySetEnumMtEph` in this scope
    --> src/Chap41/ArraySetEnumMtEph.rs:1015:25
     |
1015 |     impl fmt::Debug for ArraySetEnumMtEph {
     |                         ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySetEnumMtEph` in this scope
    --> src/Chap41/ArraySetEnumMtEph.rs:1022:27
     |
1022 |     impl fmt::Display for ArraySetEnumMtEph {
     |                           ^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 3447MB, peak z3 RSS: 85MB, min free: 23023MB
Sampled CPU Usage: rust_verify: 65s, z3 children: 58s
